--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
